@@ -1,3 +1,9 @@
+2001-02-26  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* w3m.el (w3m-fontify): Add code to decode w3m-specific extended
+	charcters.
+	(w3m-extended-charcters-table): New constant.
+
 2001-02-08  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-async-exec): New customizable variable.
